public/css/main.css
/* ... */
.content_stream > ul > .firstChild{
	margin:44px 0px 0px 0px;
}

/*--Element--*/
/*heart button*/

.button_heart,.button_flip{
	border-radius:50px;
	-webkit-border-radius:50px;
	-moz-border-radius:50px;
	border:1px solid rgb(200,200,200);
	box-shadow:1px 1px 2px rgb(80,80,80);
	width:40px;
	height:40px;
	position: absolute;
	background-color:rgb(249,248,250);
	z-index:1200;
	display:none;
	text-align: center;
	cursor:pointer;
	right:60px;
	top:10px;
}

#collage .button_heart, 
#tryclothes .button_heart{
	right:30px;
	top:10px;

}

.content_large > .button_heart{
	width:60px;
	height:60px;
	right:85px;
	top:15px;

}

.content_large .heart_empty,
.content_large .heart_filled{
	width:60px;
	height:60px;
}

.button_heart .heart_empty span,
.button_heart .heart_filled span{
	font-size:0.7em;
	position:absolute;
	right:0;
	left:0;
	margin:12px auto;
	color:rgb(255,255,255);
}
.content_large .heart_empty span,
.content_large .heart_filled span{
	font-size:0.9em;
	margin:20px;
}


.button_heart .heart_filled span{
	color:rgb(255,255,255);
}

/*flip button*/


.button_flip{
	right:10px;
	top:10px;
	text-align: left;
}

.content_large .button_flip{
	width:60px;
	height:60px;
	right:15px;
	top:15px;
}


.content_small .icon_flip_dark,
.content_small .icon_flip_grey{
	width:40px;
	height:40px;
}
.content_large .icon_flip_dark,
.content_large .icon_flip_grey{
	width:60px;
	height:60px;
}

.content_small .icon_flip_dark,
.content_large .icon_flip_dark{
	display:none;
}


/*contents*/
.openModal{
	cursor: pointer;
}

.collageBox{
	width:100%;
	height:302px;
	background-color:rgb(255,255,255);
	border-bottom:1px solid rgb(220,220,220);
	position: absolute;
	top:0px;
}

.content_large .collageBox{
	height:477px;
}

.collageBox-inside{
	width:100%;
	margin:36px 0px 0px 0px;
	position:relative;
}

.content_large .collageBox-inside{
	margin:60px 0px 0px 0px;
}

.content_stream img{
	width:100%;
}

/*content description*/
.descriptionBox_wrapper{
	width:100%;
	height:70px;
	position: absolute;
	bottom:0px;
}

.descriptionBox{
	position: relative;
	height:100%;
	width:100%;
	cursor: default;	
}


.content_large .descriptionBox_wrapper{
	height:110px;
}

.styleTitle{
	font-size:1.45em;
	height:50px;
	width:278px;
	line-height: 100%;
	position:absolute;
	top:8px;
	left:8px;
	cursor: default;
}

.content_large .styleTitle{
	font-size:1.9em;
	height:65px;
	width:450px;
	top:13px;
	left:13px;
}

.styleTitle span a{
	color:rgb(70,70,70);
}

.styleInfo{
	font-size:0.9em;
	height:20px;
	width:278px;
	position:absolute;
	bottom:3px;
	left:8px;
	z-index:100;
}

.content_large .styleInfo{
	font-size:1.2em;
	width:100%;
	bottom:10px;
	left:13px;
}


.artist_name{
	color:rgb(120,120,120);
}

.artist_name > span{
	color:rgb(100,100,150);
	font-size:1.2em;
}

.styleCategory{
	color:rgb(120,120,120);
	margin-left:15px;

}


.content_large  .styleCategory{
	margin-left:20px;
}

.styleCategory > span{
	font-size:1.2em;
	color:rgb(100,100,150);
}


/*--Effect--*/

.styleInfo .artist_name:hover span{
	color:rgb(80,120,200);
}

.styleCategory:hover span{
	color:rgb(80,120,200);
}

.styleTitle span:hover a{
	color:rgb(80,120,180);
}

.button_flip:hover .icon_flip_grey{
	display:none;
}
.button_flip:hover .icon_flip_dark{
	display:block;
}

.button_flip:hover,
.button_heart:hover{
	border-color:rgb(150,150,150);
}

.button_flip:active,
.button_heart:active{
	border-color:rgb(150,150,150);
	background-color: rgb(200,200,200);
	box-shadow:none;
}

.content_large:hover,
.content_small:hover{
	border-color:rgb(160,160,160);
}


/*------------------------------------POPUP BOX------------------------------------*/
/*----Overall----*/
/*--Structure--*/

#popup_overlay,#quickView,#changePic,#editProfile,#registration_modalBox{
	display:none;
    z-index:40000;
	position:fixed;
	top:0;
	bottom:0;
	right:0;
	left:0;
}

#transparentBackground{
	position: fixed;
	background-color:rgb(200,210,215); 
	height:100%;
	width:100%;
	opacity:0.94;
}

#modalbox,#modalbox-quick,#modalbox-changePic,#modalbox-editProfile,#signup_modalBox{
	position:relative;
	width:100%; 
	height:100%; 
	overflow-y: scroll;
}

#popup{
	position:absolute;
	min-width:1000px;
	max-width:1000px;
	right:0;
	left:1%;
	margin:15px auto;
	z-index:999999;
	cursor: default;

}

.modalbox-fixPosition{
	position:fixed;
	text-align: center;
	font-size:1.2em;
	padding:10px 5px 10px 5px;
}



/*--Element(overall)--*/


.backToTop,.button_about{
	width:25px;
	height:15px;
	right:10px;
	bottom:50px;
	display:none;
	z-index:9997;
	color:rgb(200,200,200);
	cursor: pointer;
	font-size:1.2em;
	font-family:"Calisto MT";
}

.button_about{
	bottom:10px;
	display: block;
	z-index:9999;
}


.modalbox-fixPosition.closeBox{
	position:fixed;
	width:30px;
	height:30px;
	right:30px;
	top:-3px;
	padding-top:5px;
	text-align: center;
	z-index:99999999;
	cursor: pointer;
	border:1px solid rgb(160,160,160);
}

/*--Effect(overall)--*/
.modalbox-fixPosition.closeBox:hover{
	background-color: #d9dddd; background-image: -webkit-gradient(linear, left top, left bottom, from(#d9dddd), to(#c6c3c3));
	background-image: -webkit-linear-gradient(top, #d9dddd, #c6c3c3);
	background-image: -moz-linear-gradient(top, #d9dddd, #c6c3c3);
	background-image: -ms-linear-gradient(top, #d9dddd, #c6c3c3);
	background-image: -o-linear-gradient(top, #d9dddd, #c6c3c3);
	background-image: linear-gradient(to bottom, #d9dddd, #c6c3c3);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#d9dddd, endColorstr=#c6c3c3);
}

/*----Main pop up ----*/
/*-Structure--*/
/*Overall*/
.popup-mainContainer{
	width:75%;
	position:relative;
	border:1px solid rgb(170,170,170);
	float:left;
}

#mainContainer_content{
	height:720px;
	margin-top:40px;

}
/* ... */

